# tredenec_gcp_llm_observability

./: README.md  main.ipynb  main_v2.ipynb  main_v3_w_logging.ipynb  pyproject.toml  test2.ipynb
default_agent/my_agent/.adk/: session.db
