[project]
name = "gcp-trace-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.1.0",
    "ipykernel>=7.2.0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-exporter-otlp>=1.41.1",
    "python-dotenv>=1.2.2",
]
